testsuite/tests/typing-rectypes-bugs/pr5343_bad.compilers.reference
File "pr5343_bad.ml", line 11, characters 2-14:
11 |   type u = u t and v = v t
       ^^^^^^^^^^^^
Error: The definition of u contains a cycle:
         u = u t,
         the type t is considered abstract,
         u t contains u
